--- a/src/main/resources/login-view.fxml
+++ b/src/main/resources/login-view.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -11,7 +10,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="loginPage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #dfe8f7;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controllers.LoginController">
+<AnchorPane fx:id="loginPage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #dfe8f7;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.LoginController">
    <children>
       <Rectangle arcHeight="30.0" arcWidth="30.0" fill="WHITE" height="333.0" layoutX="262.0" layoutY="206.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="376.0" />
       <Label layoutX="288.0" layoutY="231.0" prefHeight="38.0" prefWidth="82.0" style="-fx-font-family: gothic; -fx-font-weight: 700;" text="Login" textFill="#303030">
@@ -26,7 +25,6 @@
             <Font size="14.0" />
          </font>
       </TextField>
-      <CheckBox fx:id="showPassCB" layoutX="289.0" layoutY="423.0" mnemonicParsing="false" onMouseClicked="#showPass" text="Prikazite sifru" textFill="#3e92ff" />
       <Button fx:id="loginBtn" layoutX="287.0" layoutY="475.0" mnemonicParsing="false" onMouseClicked="#login" prefHeight="38.0" prefWidth="326.0" style="-fx-background-color: #3e92ff;" text="Uloguj me" textFill="WHITE">
          <font>
             <Font size="14.0" />
@@ -41,5 +39,10 @@
             <Font size="14.0" />
          </font>
       </PasswordField>
+      <Button fx:id="showPassBtn" layoutX="570.0" layoutY="422.0" mnemonicParsing="false" onMousePressed="#showPass" onMouseReleased="#hidePass" prefHeight="18.0" prefWidth="42.0" style="-fx-background-color: blue;">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
    </children>
 </AnchorPane>
