--- a/src/main/resources/homepage-view.fxml
+++ b/src/main/resources/homepage-view.fxml
@@ -49,7 +49,10 @@
                         <Font size="15.0" />
                      </font>
                   </Label>
-                  <Button layoutX="21.0" layoutY="14.0" mnemonicParsing="false" text="logout" />
+                  <Button fx:id="logoutBtn" layoutX="21.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#logout" text="logout">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></Button>
                </children>
             </AnchorPane>
           <AnchorPane fx:id="desniPane" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
