--- a/src/main/resources/login-view.fxml
+++ b/src/main/resources/login-view.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -20,9 +21,9 @@
             <Font name="Century Gothic" size="23.0" />
          </font>
       </Label>
-      <Label layoutX="394.0" layoutY="280.0" text="E-mail adresa" />
+      <Label layoutX="394.0" layoutY="280.0" text="Korisnicko ime" />
       <Label layoutX="393.0" layoutY="351.0" text="Sifra" />
-      <TextField fx:id="emailInpt" layoutX="392.0" layoutY="301.0" prefHeight="38.0" prefWidth="326.0" promptText="unesite e-mail">
+      <TextField fx:id="usernameInpt" layoutX="392.0" layoutY="301.0" prefHeight="38.0" prefWidth="326.0" promptText="unesite korisnicko ime">
          <font>
             <Font size="14.0" />
          </font>
@@ -53,6 +54,9 @@
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
+               <effect>
+                  <ColorAdjust brightness="0.26" />
+               </effect>
             </ImageView>
          </graphic>
       </Button>
