--- a/src/main/resources/homepage-view.fxml
+++ b/src/main/resources/homepage-view.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
@@ -53,11 +54,41 @@
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor></Button>
+                  <Button fx:id="pocetna" layoutX="237.0" layoutY="617.0" mnemonicParsing="false" onMouseClicked="#prikaziPocetnu" prefHeight="67.0" prefWidth="50.0" style="-fx-background-color: none;" textFill="WHITE" visible="false">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                     <graphic>
+                        <ImageView cache="true" cacheHint="QUALITY" fitHeight="66.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@img/back.png" />
+                           </image>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Button fx:id="pocetna1" layoutX="237.0" layoutY="617.0" mnemonicParsing="false" onMouseClicked="#prikaziPocetnu1" prefHeight="67.0" prefWidth="50.0" style="-fx-background-color: none;" visible="false">
+                     <graphic>
+                        <ImageView fitHeight="66.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@img/back.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
                </children>
             </AnchorPane>
           <AnchorPane fx:id="desniPane" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <Button fx:id="sviPredmeti" layoutX="39.0" layoutY="40.0" mnemonicParsing="false" onMouseEntered="#predjiIkona" onMouseExited="#izadjiIkona" opacity="0.8" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: none;">
+                  <Button fx:id="sviPredmeti" layoutX="39.0" layoutY="40.0" mnemonicParsing="false" onMouseClicked="#prikaziSvePredmete" onMouseEntered="#predjiIkona" onMouseExited="#izadjiIkona" opacity="0.8" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: none;">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
@@ -87,7 +118,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button fx:id="sviUcenici" layoutX="554.0" layoutY="40.0" mnemonicParsing="false" onMouseEntered="#predjiIkona" onMouseExited="#izadjiIkona" opacity="0.8" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: none;">
+                  <Button fx:id="sviUcenici" layoutX="554.0" layoutY="40.0" mnemonicParsing="false" onMouseClicked="#prikaziSveUcenike" onMouseEntered="#predjiIkona" onMouseExited="#izadjiIkona" opacity="0.8" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: none;">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
@@ -102,7 +133,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button fx:id="sveSkole" layoutX="39.0" layoutY="251.0" mnemonicParsing="false" onMouseEntered="#predjiIkona" onMouseExited="#izadjiIkona" opacity="0.8" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: none;">
+                  <Button fx:id="sveSkole" layoutX="39.0" layoutY="251.0" mnemonicParsing="false" onMouseClicked="#prikaziSveSkole" onMouseEntered="#predjiIkona" onMouseExited="#izadjiIkona" opacity="0.8" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: none;">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
@@ -117,7 +148,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button fx:id="mojaOcjena" layoutX="300.0" layoutY="251.0" mnemonicParsing="false" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: none;">
+                  <Button fx:id="mojaOcjena" layoutX="300.0" layoutY="251.0" mnemonicParsing="false" onMouseEntered="#predjiIkona" onMouseExited="#izadjiIkona" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: none;">
                      <cursor>
                         <Cursor fx:constant="DEFAULT" />
                      </cursor>
@@ -183,7 +214,6 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Label fx:id="test" layoutX="272.0" layoutY="578.0" prefHeight="18.0" prefWidth="166.0" text="Label" />
                </children>
             </AnchorPane>
         </items>
@@ -191,24 +221,6 @@
       <Pane fx:id="obrazac" layoutX="333.0" prefHeight="700.0" prefWidth="766.4" visible="false">
          <children>
             <Label fx:id="test2" layoutX="35.0" layoutY="665.0" text="dodati polje email kod prof i ucenika" />
-            <Button fx:id="pocetna" layoutX="29.0" layoutY="27.0" mnemonicParsing="false" onMouseClicked="#prikaziPocetnu" prefHeight="67.0" prefWidth="50.0" style="-fx-background-color: none;" textFill="WHITE">
-               <font>
-                  <Font size="14.0" />
-               </font>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-               <graphic>
-                  <ImageView cache="true" cacheHint="QUALITY" fitHeight="66.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@img/back.png" />
-                     </image>
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
-                  </ImageView>
-               </graphic>
-            </Button>
             <Label fx:id="naslovObrasca" alignment="CENTER" layoutX="115.0" layoutY="125.0" prefHeight="35.0" prefWidth="537.0" text="Kreiraj" textFill="#303030">
                <font>
                   <Font size="24.0" />
@@ -406,5 +418,33 @@
             </Pane>
          </children>
       </Pane>
+      <ScrollPane fx:id="prikaziSve" layoutX="333.0" pannable="true" prefHeight="700.0" prefWidth="766.4" visible="false">
+        <content>
+          <AnchorPane fx:id="prikaziSvePane" minHeight="0.0" minWidth="0.0" prefHeight="650.0" prefWidth="760.0">
+               <children>
+                  <Label layoutX="38.0" layoutY="659.0" text="nesto" />
+                  <Pane layoutX="25.0" layoutY="15.0" prefHeight="200.0" prefWidth="700.0" style="-fx-background-color: #dfe8f7;" visible="false">
+                     <children>
+                        <ImageView cache="true" cacheHint="QUALITY" fitHeight="128.0" fitWidth="138.0" layoutX="33.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@img/teacher-f.png" />
+                           </image>
+                        </ImageView>
+                        <Label alignment="CENTER" layoutX="14.0" layoutY="154.0" prefHeight="21.0" prefWidth="166.0" text="Ime i prezime" textAlignment="CENTER">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Label>
+                        <Label alignment="TOP_LEFT" layoutX="188.0" layoutY="17.0" prefHeight="167.0" prefWidth="490.0" text="Ime i prezime" textAlignment="CENTER">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </Pane>
+               </children>
+            </AnchorPane>
+        </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
