--- a/src/main/resources/homepage-view.fxml
+++ b/src/main/resources/homepage-view.fxml
@@ -3,7 +3,10 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
@@ -88,7 +91,7 @@
             </AnchorPane>
           <AnchorPane fx:id="desniPane" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <Button fx:id="sviPredmeti" layoutX="39.0" layoutY="40.0" mnemonicParsing="false" onMouseClicked="#prikaziSvePredmete" onMouseEntered="#predjiIkona" onMouseExited="#izadjiIkona" opacity="0.8" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: none;">
+                  <Button fx:id="sviPredmeti" layoutX="39.0" layoutY="40.0" mnemonicParsing="false" onMouseClicked="#PosaoObrazac" onMouseEntered="#predjiIkona" onMouseExited="#izadjiIkona" opacity="0.8" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: none;">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
@@ -133,7 +136,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button fx:id="sveSkole" layoutX="39.0" layoutY="251.0" mnemonicParsing="false" onMouseClicked="#prikaziSveSkole" onMouseEntered="#predjiIkona" onMouseExited="#izadjiIkona" opacity="0.8" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: none;">
+                  <Button fx:id="sveSkole" layoutX="39.0" layoutY="251.0" mnemonicParsing="false" onMouseClicked="#PosaoObrazac" onMouseEntered="#predjiIkona" onMouseExited="#izadjiIkona" opacity="0.8" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: none;">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
@@ -203,6 +206,45 @@
                      </cursor>
                   </Button>
                   <Button fx:id="novaSkola" layoutX="169.0" layoutY="251.0" mnemonicParsing="false" onMouseClicked="#dodajSkolu" onMouseEntered="#predjiIkona" onMouseExited="#izadjiIkona" opacity="0.8" prefHeight="46.0" prefWidth="51.0" style="-fx-background-color: none;">
+                     <graphic>
+                        <ImageView cache="true" cacheHint="QUALITY" fitHeight="48.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@img/add.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="novaOcjena" layoutX="430.0" layoutY="251.0" mnemonicParsing="false" onMouseClicked="#dodajOcjenu" onMouseEntered="#predjiIkona" onMouseExited="#izadjiIkona" opacity="0.8" prefHeight="46.0" prefWidth="51.0" style="-fx-background-color: none;">
+                     <graphic>
+                        <ImageView cache="true" cacheHint="QUALITY" fitHeight="48.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@img/add.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="sviIzostanci" layoutX="554.0" layoutY="251.0" mnemonicParsing="false" onMouseEntered="#predjiIkona" onMouseExited="#izadjiIkona" opacity="0.8" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: none;">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                     <graphic>
+                        <ImageView cache="true" cacheHint="QUALITY" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@img/izostanak.png" />
+                           </image>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Button fx:id="noviIzostanak" layoutX="683.0" layoutY="251.0" mnemonicParsing="false" onMouseClicked="#dodajIzostanak" onMouseEntered="#predjiIkona" onMouseExited="#izadjiIkona" opacity="0.8" prefHeight="46.0" prefWidth="51.0" style="-fx-background-color: none;">
                      <graphic>
                         <ImageView cache="true" cacheHint="QUALITY" fitHeight="48.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -413,6 +455,58 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
+               </children>
+            </Pane>
+            <Pane fx:id="zaposliSe" layoutX="226.0" layoutY="160.0" prefHeight="469.0" prefWidth="314.0" style="-fx-background-color: E3E9ED;" visible="false">
+               <effect>
+                  <DropShadow offsetX="-5.0" offsetY="5.0" spread="0.15">
+                     <color>
+                        <Color opacity="0.14041097462177277" />
+                     </color>
+                  </DropShadow>
+               </effect>
+               <children>
+                  <Button fx:id="dodajNoviPosao" layoutX="122.0" layoutY="408.0" mnemonicParsing="false" onMouseClicked="#podnesiPosao" style="-fx-background-color: #3e92ff;" text="Podnesi" textFill="WHITE">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Label layoutX="31.0" layoutY="91.0" text="Izaberi skolu" />
+                  <Label layoutX="31.0" layoutY="187.0" text="Izaberi predmet" />
+                  <ChoiceBox fx:id="izaberiSk" layoutX="30.0" layoutY="108.0" prefHeight="32.0" prefWidth="253.0" />
+                  <ChoiceBox fx:id="izaberiPr" layoutX="30.0" layoutY="204.0" prefHeight="32.0" prefWidth="253.0" />
+               </children>
+            </Pane>
+            <Pane fx:id="ocjObrazac" layoutX="226.0" layoutY="160.0" prefHeight="469.0" prefWidth="314.0" style="-fx-background-color: E3E9ED;" visible="false">
+               <effect>
+                  <DropShadow offsetX="-5.0" offsetY="5.0" spread="0.15">
+                     <color>
+                        <Color opacity="0.14041097462177277" />
+                     </color>
+                  </DropShadow>
+               </effect>
+               <children>
+                  <Button fx:id="dodajOcjnBtn" layoutX="122.0" layoutY="408.0" mnemonicParsing="false" onMouseClicked="#podnesiOcjenu" style="-fx-background-color: #3e92ff;" text="Podnesi" textFill="WHITE">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Label layoutX="31.0" layoutY="45.0" text="Izaberi skolu" />
+                  <Label layoutX="31.0" layoutY="202.0" text="Izaberi Ucenika" />
+                  <MenuButton fx:id="ocjSkola" layoutX="26.0" layoutY="62.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="266.0" text="-" />
+                  <MenuButton fx:id="ocjPredmet" layoutX="26.0" layoutY="136.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="266.0" text="-" />
+                  <Label layoutX="26.0" layoutY="286.0" text="Ocjena" />
+                  <ChoiceBox fx:id="ocjOcjena" layoutX="26.0" layoutY="303.0" prefHeight="25.0" prefWidth="54.0" />
+                  <Label layoutX="118.0" layoutY="286.0" text="Datum" />
+                  <DatePicker fx:id="ocjDatum" layoutX="117.0" layoutY="303.0" />
+                  <MenuButton fx:id="ocjUcenik" layoutX="26.0" layoutY="219.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="266.0" text="-" />
+                  <Label layoutX="31.0" layoutY="119.0" text="Izaberi predmet" />
                </children>
             </Pane>
          </children>
