--- a/src/main/resources/homepage-view-uc.fxml
+++ b/src/main/resources/homepage-view-uc.fxml
@@ -2,14 +2,18 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.effect.ColorAdjust?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="homepagePane" prefHeight="700.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.HomepageUcController">
@@ -79,6 +83,21 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
+                  <Button fx:id="promijeniSifruBtn" layoutX="117.0" layoutY="638.0" mnemonicParsing="false" onMouseClicked="#prikaziPolja" style="-fx-background-color: #3e92ff;" text="Promijeni sifru" textFill="WHITE">
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
+                  </Button>
+                  <Label fx:id="l2" layoutX="88.0" layoutY="549.0" text="Unesi novu sifru" visible="false" />
+                  <Label fx:id="l1" layoutX="88.0" layoutY="494.0" text="Unesi trenutnu sifru" visible="false" />
+                  <TextField fx:id="f2" layoutX="88.0" layoutY="567.0" visible="false" />
+                  <Button fx:id="potvrdiBtn" layoutX="135.0" layoutY="638.0" mnemonicParsing="false" onMouseClicked="#sakrijPolja" style="-fx-background-color: #3e92ff;" text="Potvrdi" textFill="WHITE" visible="false">
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
+                  </Button>
+                  <TextField fx:id="f1" layoutX="88.0" layoutY="512.0" visible="false" />
+                  <Label fx:id="l3" alignment="CENTER" layoutX="102.0" layoutY="617.0" prefHeight="18.0" prefWidth="120.0" text="Label" visible="false" />
                </children>
             </AnchorPane>
           <AnchorPane fx:id="desniPane" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
@@ -93,11 +112,8 @@
                               <Image url="@img/prof-grade.png" />
                            </image>
                            <cursor>
-                              <Cursor fx:constant="DEFAULT" />
+                              <Cursor fx:constant="HAND" />
                            </cursor>
-                           <effect>
-                              <ColorAdjust brightness="-0.39" contrast="-0.27" />
-                           </effect>
                         </ImageView>
                      </graphic>
                   </Button>
@@ -132,5 +148,53 @@
             </AnchorPane>
          </content>
       </ScrollPane>
+      <Pane fx:id="obrazac" layoutX="333.0" prefHeight="700.0" prefWidth="766.4" visible="false">
+         <children>
+            <Pane fx:id="profOcjObrazac" disable="true" layoutX="128.0" layoutY="241.0" prefHeight="342.0" prefWidth="511.0" style="-fx-background-color: E3E9ED;" visible="false">
+               <effect>
+                  <DropShadow offsetX="-5.0" offsetY="5.0" spread="0.15">
+                     <color>
+                        <Color opacity="0.14041097462177277" />
+                     </color>
+                  </DropShadow>
+               </effect>
+               <children>
+                  <Button fx:id="dodajPredBtn" layoutX="221.0" layoutY="298.0" mnemonicParsing="false" onMouseClicked="#podnesiOcjenuProf" style="-fx-background-color: #3e92ff;" text="Podnesi" textFill="WHITE">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Label fx:id="pitanje1" layoutX="31.0" layoutY="33.0" prefHeight="17.0" prefWidth="366.0" text="Nastava se odrzava redovno">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="pitanje2" layoutX="31.0" layoutY="97.0" prefHeight="17.0" prefWidth="366.0" text="Nastavnik se ponasa korektno prema ucenicima">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="pitanje3" layoutX="31.0" layoutY="161.0" prefHeight="17.0" prefWidth="366.0" text="Nastavnik predaje na zanimljiv nacin">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="pitanje4" layoutX="31.0" layoutY="222.0" prefHeight="17.0" prefWidth="366.0" text="Nastavnik stvara ugodnu atmosferu na predavanjima">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <ChoiceBox fx:id="izbor1" layoutX="436.0" layoutY="31.0" prefHeight="25.0" prefWidth="51.0" />
+                  <ChoiceBox fx:id="izbor2" layoutX="436.0" layoutY="95.0" prefHeight="25.0" prefWidth="51.0" />
+                  <ChoiceBox fx:id="izbor3" layoutX="436.0" layoutY="159.0" prefHeight="25.0" prefWidth="51.0" />
+                  <ChoiceBox fx:id="izbor4" layoutX="436.0" layoutY="220.0" prefHeight="25.0" prefWidth="51.0" />
+               </children>
+            </Pane>
+            <MenuButton fx:id="izborPredmeta" layoutX="324.0" layoutY="197.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="120.0" text="-" />
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
