--- a/src/main/resources/homepage-view.fxml
+++ b/src/main/resources/homepage-view.fxml
@@ -12,7 +12,6 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
-<?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -87,6 +86,21 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
+                  <Button fx:id="promijeniSifruBtn" layoutX="117.0" layoutY="638.0" mnemonicParsing="false" onMouseClicked="#prikaziPolja" style="-fx-background-color: #3e92ff;" text="Promijeni sifru" textFill="WHITE">
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
+                  </Button>
+                  <Label fx:id="l2" layoutX="88.0" layoutY="549.0" text="Unesi novu sifru" visible="false" />
+                  <Label fx:id="l1" layoutX="88.0" layoutY="494.0" text="Unesi trenutnu sifru" visible="false" />
+                  <TextField fx:id="f2" layoutX="88.0" layoutY="567.0" visible="false" />
+                  <Button fx:id="potvrdiBtn" layoutX="135.0" layoutY="638.0" mnemonicParsing="false" onMouseClicked="#sakrijPolja" style="-fx-background-color: #3e92ff;" text="Potvrdi" textFill="WHITE" visible="false">
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
+                  </Button>
+                  <TextField fx:id="f1" layoutX="88.0" layoutY="512.0" visible="false" />
+                  <Label fx:id="l3" alignment="CENTER" layoutX="102.0" layoutY="617.0" prefHeight="18.0" prefWidth="120.0" text="Label" visible="false" />
                </children>
             </AnchorPane>
           <AnchorPane fx:id="desniPane" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
@@ -161,11 +175,8 @@
                               <Image url="@img/prof-grade.png" />
                            </image>
                            <cursor>
-                              <Cursor fx:constant="DEFAULT" />
+                              <Cursor fx:constant="HAND" />
                            </cursor>
-                           <effect>
-                              <ColorAdjust brightness="-0.39" contrast="-0.27" />
-                           </effect>
                         </ImageView>
                      </graphic>
                   </Button>
