profesor moze da vidi svoje ocjene

--- a/src/main/resources/homepage-view.fxml
+++ b/src/main/resources/homepage-view.fxml
@@ -165,9 +165,9 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button layoutX="300.0" layoutY="251.0" mnemonicParsing="false" onMouseEntered="#predjiIkona" onMouseExited="#izadjiIkona" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: none;">
+                  <Button layoutX="300.0" layoutY="251.0" mnemonicParsing="false" onMouseClicked="#prikaziMojeOcjene" onMouseEntered="#predjiIkona" onMouseExited="#izadjiIkona" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: none;">
                      <cursor>
-                        <Cursor fx:constant="DEFAULT" />
+                        <Cursor fx:constant="HAND" />
                      </cursor>
                      <graphic>
                         <ImageView cache="true" cacheHint="QUALITY" fitHeight="150.0" fitWidth="150.0" opacity="0.8" pickOnBounds="true" preserveRatio="true">
