--- a/src/main/resources/homepage-view-uc.fxml
+++ b/src/main/resources/homepage-view-uc.fxml
@@ -98,13 +98,21 @@
                   </Button>
                   <TextField fx:id="f1" layoutX="88.0" layoutY="512.0" visible="false" />
                   <Label fx:id="l3" alignment="CENTER" layoutX="102.0" layoutY="617.0" prefHeight="18.0" prefWidth="120.0" text="Label" visible="false" />
+                  <Button fx:id="mojiIzostanci" layoutX="72.0" layoutY="440.0" mnemonicParsing="false" onMouseClicked="#prikaziSveIzostanke" prefHeight="32.0" prefWidth="180.0" style="-fx-background-color: #3e92ff;" text="Izostanci" textFill="WHITE">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
                </children>
             </AnchorPane>
           <AnchorPane fx:id="desniPane" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
                   <Button fx:id="anketa" layoutX="39.0" layoutY="40.0" mnemonicParsing="false" onMouseClicked="#dodajOcjenuProf" onMouseEntered="#predjiIkona" onMouseExited="#izadjiIkona" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: none;">
                      <cursor>
-                        <Cursor fx:constant="DEFAULT" />
+                        <Cursor fx:constant="HAND" />
                      </cursor>
                      <graphic>
                         <ImageView cache="true" cacheHint="QUALITY" fitHeight="150.0" fitWidth="150.0" opacity="0.8" pickOnBounds="true" preserveRatio="true">
